Progress (#34)
* wip on scanning progress, added ai generated code

* some minor refactoring to ai progress ui code to make it generic

* scanning with progress basically works, pending some improvements and house keeping refactoring

* some refactoring of interface namspaces

* refactoring to separate non gui jobs code from swing related

* rewrote scanner consept so qork better with job wramework

* wip

* wip,improving progress stuff on scanning

* wip

* wip

* wip

* wip on getting details reporting on job exactly right

* wip on getting details reporting on job exactly right

* got working dialog to select scanners and see scanners not ready prior to scan with progress dialog working

* wip

* wip, one thing played with using flatlaf, like the FlatDarculaLaf :)

* change so scanner details on success is path to file analyzed

* Update src/astrogeist/engine/util/FilesUtil.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update src/astrogeist/engine/scanner/ScannerConfigLoader.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update src/astrogeist/ui/swing/progress/JobsProgressPanel.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>